fixing some aligning

--- a/default.scss
+++ b/default.scss
@@ -27,11 +27,11 @@ body {
     }
 }
 
-@media(min-width: 720px) {
-    body {
-        .main {
-            padding-left: 0;
-            padding-right: 0;
-        }
-    }
-}
+// @media(min-width: 720px) {
+//     body {
+//         .main {
+//             padding-left: 0;
+//             padding-right: 0;
+//         }
+//     }
+// }
