--- a/listofgooddesign.scss
+++ b/listofgooddesign.scss
@@ -19,7 +19,7 @@
             ul {
                 li {
                     img {
-                        max-width: 95%;
+                        max-width: 100%;
                         background: #F2C94C;
                         border-radius: 24px;
                     }
@@ -57,21 +57,11 @@
     }
 }
 
-@media(min-width: 400px) {
+@media(min-width: 450px) {
     .section_listofgooddesign {
-        max-width: 80%;
-        margin: auto;
-        margin-bottom: 120px;
-        .listofgooddesign_heading {
-            padding-bottom: 0;
-            max-width: 448px;
-            font-size: 30px;
-            line-height: 40px;
-        }
-    }
-}
-@media(min-width: 720px) {
-    .section_listofgooddesign {
+        max-width: 85%;
+        margin-left: 7.25%;
+        margin-left: 7.25%;
         margin-bottom: 240px;
         .listofgooddesign_heading {
             padding-bottom: 0;
@@ -82,10 +72,10 @@
         .listofgooddesign_lists {
             display: grid;
             grid-template-columns: repeat(2, 1fr);
+            column-gap: 3%;
             .list:nth-of-type(2n - 1) {
-                margin-top: 160px;
+                margin-top: 40%;
                 padding-bottom: 0;
-                column-gap: 10%;
             }
         }
         .section_listofgooddesign--button {
