--- a/offeringservice.scss
+++ b/offeringservice.scss
@@ -116,7 +116,7 @@
 @media(min-width: 720px) {
     .section_offeringservices {
         padding-top: 100px;
-        max-width: 80%;
+        max-width: 85%;
         margin: auto;
         padding-bottom: 100px;
         .section_offeringservices--heading {
